--- a/webappyt/index22.html
+++ b/webappyt/index22.html
@@ -11,7 +11,7 @@
     <!--========== CSS ==========-->
     <link rel="stylesheet" href="assests/css/main.css">
 
-    <title>Responsive website food</title>
+    <title>Merakee Eekarem</title>
 </head>
 
 <body>
